[package]
name = "spark_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
hex = "0.4.3"
k256 = "0.13.2"
rand_core = "0.6.4"
ripemd = "0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sled = "0.34.7"
aes-gcm = "0.10.3"
argon2 = "0.5.2"